--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -143,7 +143,7 @@ div#app-content div.empty-message {
     background: var(--background-color);
     box-shadow: 0 4px 8px var(--color-shadow);
     border-radius: var(--radius-lg);
-    width: 90%;
+    width: 100%;
     max-width: var(--page-width-large);
     /*min-height: calc(100vh - var(--navbar-height) - 2 * var(--padding-lg));*/
     box-sizing: border-box;
@@ -1101,6 +1101,19 @@ td .card {
     background-color: transparent;
     border-radius: calc(var(--radius-md) - 2px);
     transition: background-color 0.15s ease-in-out, outline 0.05s ease-in-out;
+}
+
+.table-cell-container:has(input[type="number"]) {
+    display: flex;
+    justify-content: space-between;
+    gap: var(--padding-sm);
+    align-items: center;
+}
+.original-value {
+    display: block;
+    text-wrap: nowrap;
+    font-size: 0.9rem;
+    opacity: 0.5;
 }
 
 .dirty > .table-cell-container > .table-edit-textarea, .dirty input[type="number"] {
