--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -96,9 +96,14 @@ button {
     color: var(--color-text-inverted);
     border: none;
     cursor: pointer;
-    max-width: 250px;
+    /*max-width: 250px;
     min-width: 100px;
-    /*height: 38px;*/
+    height: 38px;*/
+    width: 120px;
+    flex-basis: 120px;
+    flex-grow: 2;
+    flex-shrink: 1;
+
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     line-height: 1.5;
