--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -913,7 +913,8 @@ tr.analyzing > td:not(.spacer-cell):not(.row-drag-handle)::after {
 
 
 .table-edit-textarea, td input[type="number"] {
-    /*width: 100%;*/
+    width: 100%;
+    display: inline-block;
     min-width: 64px;
     border:0;
     background-color: transparent;
