--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -354,6 +354,9 @@ td .card {
 
 .card:only-child,
 .card:first-child,
+.card:first-of-type {
+    margin-top: 0;
+}
 div:has(span:empty)+.card {
     margin-top: 0;
 }
@@ -915,7 +918,7 @@ tr.analyzing > td:not(.spacer-cell):not(.row-drag-handle)::after {
 .table-edit-textarea, td input[type="number"] {
     width: 100%;
     display: inline-block;
-    min-width: 64px;
+    min-width: 48px;
     border:0;
     background-color: transparent;
     border-radius: calc(var(--radius-md) - 2px);
@@ -1065,6 +1068,18 @@ tr:hover > td > .table-cell-container > .table-edit-textarea, tr:hover > td > .t
 .packlist-crates:not(.editing) table tr:last-child td {
     border-bottom: none;
 }
+.packlist-crates td:has(.table-edit-textarea) {
+    padding: 0;
+}
+.packlist-crates td .table-edit-textarea {
+    padding: 2px;
+    box-sizing: border-box;
+    margin: 2px;
+    width: calc(100% - 4px);
+}
+
+
+
 
 
 
