--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -40,8 +40,9 @@ nav img {
 }
 nav #navbar {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    width: 100%;
 }
 nav #navbar a {
     margin: auto 40px;
@@ -218,7 +219,7 @@ div#app-content > div.empty-message {
 
 
 .content {
-    padding: var(--padding-md);
+    padding: var(--padding-sm);
 }
 .content-header {
     display: flex;
@@ -231,11 +232,12 @@ div#app-content > div.empty-message {
     border: 1px solid var(--color-border);
     width: 100%;
     box-sizing: border-box;
+    border-radius: var(--radius-lg);
 }
 .content-header:has(.button-bar:only-child) {
     justify-content: right;
 } 
-.content-header:first-of-type:not(:only-child) {
+.content-header:first-of-type:not(:only-child):not(:has(+ .cards-grid)) {
     border-radius: var(--radius-lg) var(--radius-lg) 0 0;
     border-bottom: none;
 }
@@ -1015,16 +1017,21 @@ tr:hover > td > .table-cell-container > .table-edit-textarea, tr:hover > td > .t
 }
 
 .loading-bar-fill {
-    height: 100%;
+    height: 2px;
     background-color: var(--color-primary);
     border-radius: var(--radius-sm);
     transition: width 0.3s ease;
 }
 
-.loading-bar-fill.progress-indeterminate {
+
+/*.loading-bar-fill.progress-indeterminate*/
+.loading-bar-track::before {
+    position: absolute;
+    content: "";
+    inset: 0;
     background: linear-gradient(90deg,
             transparent,
-            var(--color-primary),
+            var(--color-gray),
             transparent);
     animation: loading-bar-slide 2s infinite linear;
 }
@@ -1109,7 +1116,6 @@ tr:hover > td > .table-cell-container > .table-edit-textarea, tr:hover > td > .t
         flex-direction: column;
         align-items: flex-start;
         padding: 20px;
-        width: 100%;
         box-sizing: border-box;
     }
     
