--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -616,7 +616,7 @@ th {
     top: 0;
     z-index: 1;
 }
-td:first-child::after, td.empty-message::after {
+td::after, td.empty-message::after {
     position: absolute;
     max-width: 100%;
     display: block;
@@ -658,15 +658,16 @@ td:has(img) {
     width:20px;
     height:20px;
     line-height: 1px;
-    right: 5px;
-    top: 7px;
+    right: 0;
+    top: calc(50% - 10px);
     padding: 0;
     color: var(--color-text-light);
     margin-left: 4px;
     background: var(--color-gray-bg);
     cursor: pointer;
-    font-size: 12px;
-    border-radius: 3px;
+    font-size: 18px;
+    border-radius: var(--radius-md);
+    color: var(--color-text-light);
     opacity: 0;
 }
 thead:hover .sort-button {
@@ -674,7 +675,6 @@ thead:hover .sort-button {
 }
 .sort-button:hover, .sort-button.active, thead:hover .sort-button.active {
     background-color: var(--color-gray-bg-hover);
-    color: var(--color-text);
     opacity: 1;
 }
 
