better description checking

--- a/docs/css/theme.css
+++ b/docs/css/theme.css
@@ -39,7 +39,7 @@
     --color-purple-hover: #5a32a3;
     --color-purple-bg: #e3d8f0;
     --color-purple-bg-transparent: #6f42c133;
-    --color-purple-bg-hover: #7a4a8a;
+    --color-purple-bg-hover: #bc85ce;
 
     --color-red: #ce2a24;
     --color-red-hover: #ad0a0a;
