--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -551,7 +551,7 @@ button.card {
 .close-button {
     background-color: transparent;
     display: block;
-    font-size: 20px;
+    font-size: 14px;
     color: var(--color-text-light);
     width: 22px;
     padding:0;
@@ -562,7 +562,6 @@ button.card {
     flex-shrink: 0;
     box-shadow: none;
     text-align: center;
-    justify-content: center;
 }
 .close-button:only-child {
     margin-left:auto;
@@ -763,7 +762,7 @@ table:has(.dragging):not(:has(table .dragging)) > tfoot > tr > .new-row-button {
     outline: none;
 }
 table:has(.dragging):not(:has(table .dragging)) > tfoot > tr > .new-row-button::before {
-    content: "×";
+    content: "✖";
     display: block;
     text-align: center;
     color: var(--color-text-inverted);
@@ -971,14 +970,15 @@ tr.analyzing > td:not(.spacer-cell):not(.row-drag-handle)::after,
 .table-edit-textarea, td input[type="number"] {
     width: 100%;
     display: inline-block;
-    min-width: 48px;
+    min-width: 64px;
     border:0;
     background-color: transparent;
     border-radius: calc(var(--radius-md) - 2px);
     transition: background-color 0.15s ease-in-out, outline 0.05s ease-in-out;
 }
 
-.table-cell-container:has(input[type="number"]) {
+.table-cell-container:has(input[type="number"]),
+.table-cell-container:has(button:only-child) {
     display: flex;
     justify-content: space-between;
     gap: var(--padding-sm);
