--- a/docs/css/global.css
+++ b/docs/css/global.css
@@ -60,7 +60,7 @@ body, div, span, p, h1, h2, h3, h4, h5, h6,
 th, td, ::after, ::before,
 input[type="submit"], input[type="button"], select, button {
     position: relative;
-    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out, opacity 0.05s ease-in-out !important;
+    transition: background-color 0.1s ease-in-out, color 0.1s ease-in-out, opacity 0.05s ease-in-out, max-width 0.2s ease-in-out !important;
 }
 
 
